Replace Movie Website with Item Catalog project

--- a/index.html
+++ b/index.html
@@ -110,6 +110,15 @@
         <!-- Start of featured work project listings -->
         <div class="row text-center">
             <div class="col-md-4 project-bottom-margin">
+                <img src="img/catalog_1x.jpg" srcset="img/catalog_1x.jpg 1x, img/catalog_2x.jpg 2x" class="img-responsive center-block project-image" alt="Project image">
+                <h3 class="project-title">Item Catalog</h3>
+                <p class="project-tech">Python, Flask, SQLAlchemy, JavaScript, HTML, CSS</p>
+                <ul class="project-link-list">
+                    <li class="project-link"><a href="https://github.com/abequinonez/udacity-item-catalog" target="_blank">GitHub</a></li>
+                    <li class="project-link"><a href="https://noodlelog.herokuapp.com" target="_blank">Live Demo</a></li>
+                </ul>
+            </div>
+            <div class="col-md-4 project-bottom-margin">
                 <img src="img/map_1x.png" srcset="img/map_1x.png 1x, img/map_2x.png 2x" class="img-responsive center-block project-image" alt="Project image">
                 <h3 class="project-title">Neighborhood Map</h3>
                 <p class="project-tech">HTML, CSS, JavaScript, jQuery, AJAX, Knockout</p>
@@ -117,7 +126,7 @@
                     <li class="project-link"><a href="https://github.com/abequinonez/udacity-frontend-map" target="_blank">GitHub</a></li>
                     <li class="project-link"><a href="https://abequinonez.github.io/udacity-frontend-map" target="_blank">Live Demo</a></li>
                 </ul>
-            </div>        
+            </div>
             <div class="col-md-4 project-bottom-margin">
                 <img src="img/world_1x.png" srcset="img/world_1x.png 1x, img/world_2x.png 2x" class="img-responsive center-block project-image" alt="Project image">
                 <h3 class="project-title">World City Info Page</h3>
@@ -127,6 +136,8 @@
                     <li class="project-link"><a href="https://abequinonez.000webhostapp.com/city-info" target="_blank">Live Demo</a></li>
                 </ul>
             </div>
+        </div>
+        <div class="row text-center">
             <div class="col-md-4 project-bottom-margin">
                 <img src="img/tournament_1x.png" srcset="img/tournament_1x.png 1x, img/tournament_2x.png 2x" class="img-responsive center-block project-image" alt="Project image">
                 <h3 class="project-title">Tournament Results</h3>
@@ -135,8 +146,6 @@
                     <li class="project-link"><a href="https://github.com/abequinonez/udacity-ipnd-tournament-results" target="_blank">GitHub</a></li>
                 </ul>
             </div>
-        </div>
-        <div class="row text-center">
             <div class="col-md-4 project-bottom-margin">
                 <img src="img/game_1x.png" srcset="img/game_1x.png 1x, img/game_2x.png 2x" class="img-responsive center-block project-image" alt="Project image">
                 <h3 class="project-title">Classic Arcade Game Clone</h3>
@@ -152,14 +161,6 @@
                 <p class="project-tech">Java, Swing</p>
                 <ul class="project-link-list">
                     <li class="project-link"><a href="https://github.com/abequinonez/java-gui-quiz-tutor" target="_blank">GitHub</a></li>
-                </ul>
-            </div>
-            <div class="col-md-4 project-bottom-margin">
-                <img src="img/movie_trailer_1x.jpg" srcset="img/movie_trailer_1x.jpg 1x, img/movie_trailer_2x.jpg 2x" class="img-responsive center-block project-image" alt="Project image">
-                <h3 class="project-title">Movie Trailer Website</h3>
-                <p class="project-tech">Python</p>
-                <ul class="project-link-list">
-                    <li class="project-link"><a href="https://github.com/abequinonez/udacity-fsnd-movie-trailer-site" target="_blank">GitHub</a></li>
                 </ul>
             </div>
         </div>
