Add email with simple obfuscation

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     when a link is clicked within it. The script was developed by users kevinknelson and
     pisaacs on the Bootstrap GitHub page. -->
     <script src="js/navbar-collapse.js"></script>
+    <!-- Simple email obfuscation -->
+    <script src="js/email.js"></script>
 </head>
 <body>
     <!-- Start of Bootstrap navbar -->
@@ -41,7 +43,7 @@
             <div class="collapse navbar-collapse" id="navbar-links">
             <ul class="nav navbar-nav">
                 <li><a href="#featured" class="nav-link"><i class="fa fa-file-text-o" aria-hidden="true"></i>&nbsp; Featured Work</a></li>
-                <li><a href="#" class="nav-link"><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp; Contact</a></li>
+                <li><a href="#" class="nav-link email"><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbsp; Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="https://github.com/abequinonez" target="_blank" class="nav-link"><i class="fa fa-github" aria-hidden="true"></i>&nbsp; GitHub</a></li>
@@ -176,7 +178,7 @@
         <footer class="row">
             <div class="col-md-6">
                 <ul class="media-icons">
-                    <li class="media-icon-item"><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
+                    <li class="media-icon-item"><a href="#" class="email"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
                     <li class="media-icon-item"><a href="https://github.com/abequinonez" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
                     <li class="media-icon-item"><a href="https://www.linkedin.com/in/abrahamquinonez" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                     <li class="media-icon-item"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
