--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <li class="media-icon-item"><a href="#" class="email"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
                     <li class="media-icon-item"><a href="https://github.com/abequinonez" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
                     <li class="media-icon-item"><a href="https://www.linkedin.com/in/abrahamquinonez" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                    <li class="media-icon-item"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li class="media-icon-item"><a href="https://twitter.com/abequinonez" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
             <div class="col-md-6 text-right">
