feat: Change splash sub-heading text

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <div class="splash-text">
                         <h1 class="splash-heading word-break">California-Based. Globally-Minded.</h1>
                         <hr class="splash-line">
-                        <h2 class="splash-sub-heading">Welcome! Here you'll find a collection of my work.</h2>
+                        <h2 class="splash-sub-heading">Welcome! Here you'll find a sample of my work.</h2>
                         <a href="#featured" class="btn btn-default btn-lg splash-btn" role="button">Take a look</a>
                     </div>
                 </div>
