feat: Combine project listings rows into single row

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <!-- Start of featured work project listings -->
         <div class="row text-center">
-            <div class="col-md-4 project-bottom-margin">
+            <div class="col-sm-6 col-md-4 project-bottom-margin">
                 <img src="img/catalog_1x.jpg" srcset="img/catalog_1x.jpg 1x, img/catalog_2x.jpg 2x" class="img-responsive center-block project-image" alt="Project image">
                 <h3 class="project-title">Item Catalog</h3>
                 <p class="project-tech">Python, Flask, SQLAlchemy, JavaScript, HTML, CSS</p>
@@ -120,7 +120,7 @@
                     <li class="project-link"><a href="https://noodlelog.herokuapp.com" target="_blank">Live Demo</a></li>
                 </ul>
             </div>
-            <div class="col-md-4 project-bottom-margin">
+            <div class="col-sm-6 col-md-4 project-bottom-margin">
                 <img src="img/map_1x.png" srcset="img/map_1x.png 1x, img/map_2x.png 2x" class="img-responsive center-block project-image" alt="Project image">
                 <h3 class="project-title">Neighborhood Map</h3>
                 <p class="project-tech">HTML, CSS, JavaScript, jQuery, AJAX, Knockout</p>
@@ -129,7 +129,7 @@
                     <li class="project-link"><a href="https://abequinonez.github.io/udacity-frontend-map" target="_blank">Live Demo</a></li>
                 </ul>
             </div>
-            <div class="col-md-4 project-bottom-margin">
+            <div class="col-sm-6 col-md-4 project-bottom-margin">
                 <img src="img/world_1x.png" srcset="img/world_1x.png 1x, img/world_2x.png 2x" class="img-responsive center-block project-image" alt="Project image">
                 <h3 class="project-title">World City Info Page</h3>
                 <p class="project-tech">HTML, CSS, Bootstrap, PHP, SQL, MySQL</p>
@@ -138,9 +138,9 @@
                     <li class="project-link"><a href="https://abequinonez.000webhostapp.com/city-info" target="_blank">Live Demo</a></li>
                 </ul>
             </div>
-        </div>
-        <div class="row text-center">
-            <div class="col-md-4 project-bottom-margin">
+            <!-- Clear columns at medium viewports (necessary with column wrapping) -->
+            <div class="clearfix visible-md-block"></div>
+            <div class="col-sm-6 col-md-4 project-bottom-margin">
                 <img src="img/tournament_1x.png" srcset="img/tournament_1x.png 1x, img/tournament_2x.png 2x" class="img-responsive center-block project-image" alt="Project image">
                 <h3 class="project-title">Tournament Results</h3>
                 <p class="project-tech">Python, SQL, PostgreSQL</p>
@@ -148,7 +148,7 @@
                     <li class="project-link"><a href="https://github.com/abequinonez/udacity-ipnd-tournament-results" target="_blank">GitHub</a></li>
                 </ul>
             </div>
-            <div class="col-md-4 project-bottom-margin">
+            <div class="col-sm-6 col-md-4 project-bottom-margin">
                 <img src="img/game_1x.png" srcset="img/game_1x.png 1x, img/game_2x.png 2x" class="img-responsive center-block project-image" alt="Project image">
                 <h3 class="project-title">Classic Arcade Game Clone</h3>
                 <p class="project-tech">JavaScript, jQuery, HTML5 Canvas</p>
@@ -157,7 +157,7 @@
                     <li class="project-link"><a href="https://abequinonez.github.io/udacity-frontend-game" target="_blank">Live Demo</a></li>
                 </ul>
             </div>
-            <div class="col-md-4 project-bottom-margin">
+            <div class="col-sm-6 col-md-4 project-bottom-margin">
                 <img src="img/quiz_1x.png" srcset="img/quiz_1x.png 1x, img/quiz_2x.png 2x" class="img-responsive center-block project-image" alt="Project image">
                 <h3 class="project-title">GUI Quiz Tutor</h3>
                 <p class="project-tech">Java, Swing</p>
